--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -3,15 +3,61 @@
     padding-left: 20px;
   }
 
+  nav ul li a {
+    position: relative;
+    color: white;
+    text-decoration: none;
+  }
+
+  nav ul li.active {
+    background-color: unset;
+  }
+
+  nav ul li.active a::before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    color: white;
+  }
+
+
+  nav ul li a:hover {
+    color: white;
+  }
+
+  nav ul li a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  nav ul li a:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+
   .reactNav nav {
-    background-color: lightgrey !important;
+    /* background-color: lightgrey !important; */
+    /* background-color: rgba(104, 102, 102, 0) !important; */
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0,0));
+    box-shadow: unset;
   }
   
   .reactNav a{
-    color: black;
+    color: white;
   }   
 
-  .bookLogo {
+  .logo {
     background-image: url(./logo.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -30,7 +76,7 @@
     }
   
 
-    .reactNav .bookLogo {
+    .reactNav .logo {
       display: none;
     }
   }
