--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -3,17 +3,17 @@
     padding-left: 20px;
   }
 
-  nav ul li a {
+  nav ul > li > a:not(.btn) {
     position: relative;
     color: white;
     text-decoration: none;
   }
 
-  nav ul li.active {
+  nav ul > li.active {
     background-color: unset;
   }
 
-  nav ul li.active a::before {
+  nav ul > li.active > a:not(.btn)::before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
@@ -21,11 +21,11 @@
   }
 
 
-  nav ul li a:hover {
+  nav ul > li > a:not(.btn):hover {
     color: white;
   }
 
-  nav ul li a:before {
+  nav ul > li > a:not(.btn):before {
     content: "";
     position: absolute;
     width: 100%;
@@ -40,7 +40,7 @@
     transition: all 0.3s ease-in-out 0s;
   }
 
-  nav ul li a:hover:before {
+  nav ul > li > a:not(.btn):hover:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
