use our secondary color on a tag

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -32,7 +32,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #000;
+    background-color: #63c7db;
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
