--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -11,8 +11,12 @@
     background-color: black;
   }
 
-  #profileDropdown li:hover {
-    background-color: black;
+  #profileDropdown li a {
+    color: white;
+  }
+
+  #profileDropdown li a:hover {
+    color: black;
   }
 
   #profileDropdown .noHighlight {
@@ -21,6 +25,7 @@
 
   #profileDropdown button {
     margin-left: 2px;
+    margin-top: 5px;
   }
 
   #profileDropdown .noHighlight:hover {
@@ -32,7 +37,7 @@
     padding-left: 20px;
   }
 
-  nav ul > li > a:not(.btn) {
+  nav ul > li > a:not(.btn):not(.profileLink) {
     position: relative;
     color: white;
     text-decoration: none;
@@ -42,7 +47,7 @@
     background-color: unset;
   }
 
-  nav ul > li.active > a:not(.btn)::before {
+  nav ul > li.active > a:not(.btn):not(.profileLink)::before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
@@ -50,11 +55,11 @@
   }
 
 
-  nav ul > li > a:not(.btn):hover {
+  nav ul > li > a:not(.btn):not(.profileLink):hover {
     color: white;
   }
 
-  nav ul > li > a:not(.btn):before {
+  nav ul > li > a:not(.btn):not(.profileLink):before {
     content: "";
     position: absolute;
     width: 100%;
@@ -69,7 +74,7 @@
     transition: all 0.3s ease-in-out 0s;
   }
 
-  nav ul > li > a:not(.btn):hover:before {
+  nav ul > li > a:not(.btn):not(.profileLink):hover:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
