--- a/client/src/pages/Profile/style.css
+++ b/client/src/pages/Profile/style.css
@@ -1,3 +1,7 @@
 .profilePage .pageContainer {
-    min-height: 100vh;
+    min-height: calc(100vh - 128px);
+}
+
+#profileImageCarousel {
+    height: 285px;
 }
