--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  background-image: url(./backgroundImage.jpg);
+  /* background-image: url(./backgroundImage.jpg); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
