todo page working so far

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,11 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-family: 'Montserrat', sans-serif;
-  /* background-image: url(./backgroundImage.jpg); */
+  background-image: url(./backgroundImage.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  /* background-size: 100% 100%; */
+  background-size: 100% 100%;
   font-family: 'Lato', sans-serif;
 }
 
