--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -29,7 +29,7 @@
   }
 
   #profileDropdown .noHighlight:hover {
-    background-color: black;
+    background-color: unset;
   }
 
   .reactNav .nav-wrapper {
@@ -83,7 +83,7 @@
     transform: scaleX(1);
   }
 
-  .reactNav nav {
+  #navbar-nav {
     background-color: #344955 !important;
     /* background-color: rgba(104, 102, 102, 0) !important; */
     /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0,0));
@@ -91,7 +91,7 @@
   }
   
   .reactNav a{
-    color: white;
+    color: white !important;
   }   
 
   .logo {
