updated color for the login page

--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -1,14 +1,14 @@
 #firebaseAuthContainer {
-    color: white;
+    color: #232F34;
     margin-bottom: 25px;
 }
 
 .firebaseui-input {
-    color: white !important;
+    color: #232F34 !important;
 }
 
 .firebaseui-label {
-    color: white !important;
+    color: #232F34 !important;
 }
 
 .firebaseui-link {
