--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -7,7 +7,7 @@
     margin-top: 10px;
     text-align: center;
     align-items: center;
-    height: 25vh;
+    max-height: 25vh;
 }
 
 .card-image {
@@ -15,14 +15,14 @@
 }
 
 .title {
-    font-size: 1.2em;
+    font-size: 1em;
     text-align: left;
     font-weight: 700;
     margin-top: 15px;
 }
 
 .body {
-    font-size: .75em;
+    font-size: .55em;
     text-align: left;
     margin: 0 auto;
 }
@@ -33,3 +33,8 @@
     text-align: left;
     font-weight: 300;
 }
+
+/* .hide-on-small {
+    display: none;
+
+} */
