--- a/client/src/components/GridItem/style.css
+++ b/client/src/components/GridItem/style.css
@@ -1,8 +1,18 @@
+:root {
+    --shadow: 0 1px 5px rgb(35, 47, 52, 0.8);
+    --light: #EEF0F2;
+    --primary: #344955;
+    --secondary: #232F34;
+    --third: #4A6572;
+    --orange: #f9aa33;
+}
 .item-box {
+    background: var(--light);
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     border: 1px solid black;
     text-align: center; 
+    box-shadow: var(--shadow)
 }
 
 .item-box-inner-grid {
