--- a/client/src/pages/Forum/style.css
+++ b/client/src/pages/Forum/style.css
@@ -2,26 +2,7 @@
     font-family: 'Work Sans';
 }
 
-h3 {
-    text-align: center;
-    max-height: 15vh;
-    font-size: 1em;
-    margin: 25px;
-}
-
-.show-on-small {
-    font-size: 5vw;
-    margin: 1rem;
-    background-color: red;
-}
-
-.show-on-medium-and-up {
-    margin: 30px;
-    background-color: blue;
-    font-size: 4vw;
-    text-align: center;
-}
-
-.btn {
-    color: #344955; 
+#forumTop {
+    font-size: 1.8em;
+    padding-bottom: 20px;
 }
