--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -1,5 +1,5 @@
 
-.card {
+.postcard {
     width: 95%;
     margin: 0 auto;
     margin-top: 10px;
@@ -7,29 +7,23 @@
     align-items: center;
 } 
 
-.card-image {
+.postcard .card-image {
     width: 95%;
 }
 
-.title {
+.postcard .post-title {
     font-size: 25px;
     text-align: left;
     font-weight: 700;
 }
 
-.body {
-
-    text-align: left;
-    margin: 0 auto;
-}
-
-.author {
+.postcard .author {
     padding-bottom: 20px;
     text-align: left;
     font-weight: 300;
 }
 
-.title > a {
+.postcard .title > a {
     color: #344955;
     padding-bottom: 5px;
     border-bottom: 2px solid #F9AA33;
