Fixing active page look on navbar mobile menu

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -118,6 +118,10 @@
     background-color: #4A6572;
   }
 
+  .sidenav li.active {
+    background-color: #526c7a !important;
+  }
+
   @media only screen and (max-width: 640px) {
     .reactNav .nav-wrapper {
       padding-right: unset;
