--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -51,3 +51,155 @@
     -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
 }
+
+.firebaseui-idp-button {
+    text-decoration: none;
+    color:  #344955;
+    text-align: center;
+    letter-spacing: .5px;
+    -webkit-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    cursor: pointer;
+    background-color: #F9AA33;
+    font-size: 14px;
+    outline: 0;
+    border: none;
+    border-radius: 2px;
+    display: inline-block;
+    height: 36px;
+    line-height: 36px;
+    padding: 0 16px;
+    text-transform: uppercase;
+    vertical-align: middle;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    
+    position: relative;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+    -webkit-transition: .3s ease-out;
+    transition: .3s ease-out;
+}
+
+.firebaseui-button:hover {
+    background-color: rgb(255, 199, 116) !important;
+}
+
+.firebaseui-button:focus {
+    background-color: rgb(248, 152, 9);
+}
+
+.firebaseui-idp-text.firebaseui-idp-text-short {
+    display: none;
+}
+
+.firebaseui-idp-icon {
+    height: 18px;
+    width: 18px;
+}
+
+.firebaseui-idp-favicon, .firebaseui-idp-icon {
+    border: none;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.firebaseui-idp-button {
+    direction: ltr;
+    font-weight: 500;
+    height: auto;
+    line-height: normal;
+    max-width: 220px;
+    min-height: 40px;
+    padding: 8px 16px;
+    text-align: left;
+    width: 100%;
+}
+
+.mdl-button, .mdl-button .material-icons {
+    vertical-align: middle;
+}
+/* 
+.mdl-button {
+    background: 0 0;
+    border: none;
+    border-radius: 2px;
+    color: #000;
+    position: relative;
+    height: 36px;
+    margin: 0;
+    min-width: 64px;
+    padding: 0 16px;
+    display: inline-block;
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    overflow: hidden;
+    will-change: box-shadow;
+    transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
+    outline: 0;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    line-height: 36px;
+} */
+
+.firebaseui-idp-icon-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.firebaseui-idp-google, .firebaseui-idp-google:hover, .mdl-button.firebaseui-idp-google:active, .mdl-button.firebaseui-idp-google:focus {
+    background-color: #fff !important;
+}
+
+.firebaseui-idp-google>.firebaseui-idp-text {
+    color: #757575;
+}
+
+/* .mdl-button--raised {
+    background: rgba(158,158,158,.2);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+} */
+
+.firebaseui-idp-password, .firebaseui-idp-password:hover, .mdl-button.firebaseui-idp-password:active, .mdl-button.firebaseui-idp-password:focus {
+    background-color: #db4437;
+}
+
+.firebaseui-idp-list>.firebaseui-list-item {
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.firebaseui-list-item {
+    direction: ltr;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
+.firebaseui-idp-list {
+    list-style: none;
+    margin: 1em 0;
+    padding: 0;
+}
+
+.firebaseui-idp-text {
+    color: #fff;
+    display: table-cell;
+    font-size: 14px;
+    padding-left: 16px;
+    text-transform: none;
+    vertical-align: middle;
+}
+
+.firebaseui-idp-text.firebaseui-idp-text-long {
+    display: table-cell;
+} 
