--- a/client/src/pages/Login/style.css
+++ b/client/src/pages/Login/style.css
@@ -114,7 +114,7 @@
     font-weight: 500;
     height: auto;
     line-height: normal;
-    max-width: 220px;
+    max-width: 240px;
     min-height: 40px;
     padding: 8px 16px;
     text-align: left;
@@ -124,32 +124,6 @@
 .mdl-button, .mdl-button .material-icons {
     vertical-align: middle;
 }
-/* 
-.mdl-button {
-    background: 0 0;
-    border: none;
-    border-radius: 2px;
-    color: #000;
-    position: relative;
-    height: 36px;
-    margin: 0;
-    min-width: 64px;
-    padding: 0 16px;
-    display: inline-block;
-    font-family: Roboto,Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0;
-    overflow: hidden;
-    will-change: box-shadow;
-    transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
-    outline: 0;
-    cursor: pointer;
-    text-decoration: none;
-    text-align: center;
-    line-height: 36px;
-} */
 
 .firebaseui-idp-icon-wrapper {
     display: table-cell;
@@ -164,10 +138,13 @@
     color: #757575;
 }
 
-/* .mdl-button--raised {
-    background: rgba(158,158,158,.2);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-} */
+.firebaseui-idp-twitter, .firebaseui-idp-twitter:hover, .mdl-button.firebaseui-idp-twitter:active, .mdl-button.firebaseui-idp-twitter:focus {
+    background-color: #55acee;
+}
+
+.firebaseui-idp-facebook, .firebaseui-idp-facebook:hover, .mdl-button.firebaseui-idp-facebook:active, .mdl-button.firebaseui-idp-facebook:focus {
+    background-color: #3b5998;
+}
 
 .firebaseui-idp-password, .firebaseui-idp-password:hover, .mdl-button.firebaseui-idp-password:active, .mdl-button.firebaseui-idp-password:focus {
     background-color: #db4437;
