Making back arrow style global.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,3 +114,7 @@ input[type="checkbox"].filled-in:checked+span:not(.lever):after {
   border: 2px solid #F9AA33;
   background-color: #F9AA33;
 }
+
+.backArrow {
+  color: #344955;
+}
