Making container style for all pages more global

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,3 +118,7 @@ input[type="checkbox"].filled-in:checked+span:not(.lever):after {
 .backArrow {
   color: #344955;
 }
+
+/* .container {
+  width: 95%;
+} */
