--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -16,7 +16,8 @@
   }
 
   #profileDropdown li a:hover {
-    color: black;
+    color: #232F34 !important;
+    background-color: #D2DBDF;
   }
 
   #profileDropdown .noHighlight {
@@ -24,8 +25,12 @@
   }
 
   #profileDropdown button {
-    margin-left: 2px;
-    margin-top: 5px;
+    width: calc(100% - 10px);
+    margin: 5px 5px 5px 5px;
+  }
+
+  #profileDropdown .buttonListItem {
+    min-height: 35px;
   }
 
   #profileDropdown .noHighlight:hover {
@@ -112,10 +117,6 @@
 
   #title-overflow {
     font-family: 'Titan One', cursive;
-  }
-
-  nav ul a:hover {
-    background-color: #4A6572;
   }
 
   .sidenav li.active {
