Chaning search bar color.

--- a/client/src/components/Searchbar/style.css
+++ b/client/src/components/Searchbar/style.css
@@ -1,5 +1,5 @@
 .searchbarContainer {
-    background-color: #F9AA33 !important;
+    background-color: white !important;
 }
 
 .searchbarContainer .material-icons {
